--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
             </div>
         </footer>
     </main>
+
+    <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
